# docker-assemble

./: .gitignore  README.md  docker-assemble  pyproject.toml  setup.py
.github/workflows/: pypi-publish.yml
assemble/: docker_utils.py  main.py
docker_assemble/: image_exporter.py  main.py
