[build-system]
requires = ["setuptools>=45", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[project]
name = "docker-assemble"
description = "A CLI tool to extract and analyze Docker images"
readme = "README.md"
authors = [{ name = "Sina" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
dependencies = [
  "docker>=6.0.0"
]


[project.scripts]
docker-assemble = "docker_assemble.main:run"


[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

