[build-system]
requires = ["setuptools>=45", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[project]
name = "docker-assemble"
description = "CLI tool for extracting Docker image filesystems, inspecting large files, and rebuilding optimized Docker images."
readme = "README.md"
authors = [{ name = "Sina" }]
license = "Apache-2.0"
requires-python = ">=3.8"
dependencies = [
  "docker>=6.0.0"
]

dynamic = ["version"]


[project.urls]
Homepage = "https://github.com/soreana/docker-assemble"
Repository = "https://github.com/soreana/docker-assemble"
Issues = "https://github.com/soreana/docker-assemble/issues"
PyPI = "https://pypi.org/project/docker-assemble/"

[project.scripts]
docker-assemble = "docker_assemble.main:run"


[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

